# lambdaconf2017

./: interpreter.cabal  meetup.cabal  stack.yaml
.stack-work/install/x86_64-osx/lts-8.12/8.0.2/flag-cache/: haskeline-0.7.4.0-DeCMMzb9PSJC3zwcMXMk7s  interpreter-0.1.0.0-1fQkz0Rh1MTBdq4SuTfqDC  megaparsec-5.2.0-20VD1iYD3ayJUmkRrEccYt  terminfo-0.4.1.0-FNScbjwxa2Y3p4e5RvG3l
.stack-work/install/x86_64-osx/lts-8.12/8.0.2/lib/x86_64-osx-ghc-8.0.2/: libHSinterpreter-0.1.0.0-1fQkz0Rh1MTBdq4SuTfqDC-ghc8.0.2.dylib
.stack-work/install/x86_64-osx/lts-8.12/8.0.2/lib/x86_64-osx-ghc-8.0.2/interpreter-0.1.0.0-1fQkz0Rh1MTBdq4SuTfqDC/: Eval.hi  Parser.dyn_hi  Parser.hi  Repl.dyn_hi  Typed.dyn_hi  Typed.hi
.stack-work/install/x86_64-osx/lts-8.12/8.0.2/pkgdb/: package.cache
src/: Eval.hs  Parser.hs  Repl.hs  Typed.hs  Untyped.hs
