name:                interpreter
version:             0.1.0.0
description:         Please see README.md
homepage:            https://github.com/chalkandpaste/lambdaconf2017
license:             BSD3
license-file:        LICENSE
author:              Christopher Hockenbrocht
maintainer:          christopher@leapyear.io
copyright:           2017 Christopher Hockenbrocht
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parser
                     , Eval
                     , Repl
                     , Typed
                     , Untyped
  build-depends:       base >= 4.7 && < 5
                     , constraints
                     , haskeline
                     , megaparsec
                     , mtl
                     , transformers
                     , containers
  default-language:    Haskell2010

executable interpeter
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , interpreter
  default-language:    Haskell2010

test-suite interpreter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , meetup
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/meetup
